Add Vazirmatn font

--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -1,6 +1,6 @@
 .root {
   -fx-background-color: #090040;
-  -fx-font-family: "Arial", sans-serif;
+  -fx-font-family: "Vazirmatn", "Arial", sans-serif;
   -fx-text-fill: #FFFFFF;
   -fx-font-size: 16px;
 }
